--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
-# Dependências
-node_modules/
-.pnp
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -8,42 +10,82 @@ node_modules/
 !.yarn/releases
 !.yarn/versions
 
-# Next.js
-.next/
-out/
+# testing
+/coverage
 
-# Cobertura de teste
-coverage/
+# next.js
+/.next/
+/out/
 
-# Logs
+# production
+/build
+
+# misc
+.DS_Store
+*.pem
+
+# debug
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-pnpm-debug.log*
+.pnpm-debug.log*
 
-# Ambiente
-.env
+# env files (can opt-in for committing if needed)
+.env*
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# Runtime data
+pids
+*.pid
+*.seed
+*.pid.lock
+
+# Coverage directory used by tools like istanbul
+coverage/
+*.lcov
+
+# nyc test coverage
+.nyc_output
+
+# Dependency directories
+jspm_packages/
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variables file
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
-# Ferramentas/IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Stores VSCode versions used for testing VSCode extensions
+.vscode-test
 
-# SO (Windows / macOS)
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# Build artifacts que não precisam ir pro Git
-dist/
-build/
+# Temporary folders
+tmp/
+temp/
